# parlance

./: Cargo.toml  a.par
astro/: Cargo.toml
astro/src/: lib.rs  main.rs
examples/: a.par  hello_world.par  infix.par  let_in.par
examples/greet/: astro.toml  main.par  parlance.toml
examples/greet/src/: main.par  main.pars
examples/std/: astro.toml  io.par
interpreter/parlance-ast/src/: lib.rs
interpreter/parlance-diagnostics/src/: lib.rs
interpreter/parlance-ir/src/: lib.rs
interpreter/parlance-runtime/src/: lib.rs
interpreter/parlance-stdlib/src/: int.rs  io.rs  lib.rs  parlance_control.rs  parlance_int.rs  parlance_io.rs  parlance_string.rs  string.rs
parlance-ast/: Cargo.toml
parlance-ast/src/: lib.rs
parlance-cli/: Cargo.toml
parlance-cli/src/: lib.rs  main.rs
parlance-compiler/: Cargo.toml
parlance-compiler/src/: desugarer.rs  flattener.rs  lib.rs  resolver.rs
parlance-diagnostics/: Cargo.toml
parlance-diagnostics/src/: lib.rs
parlance-ir/: Cargo.toml
parlance-ir/src/: lib.rs
parlance-module/: Cargo.toml
parlance-module/src/: lib.rs
parlance-parser/: Cargo.toml
parlance-parser/src/: lib.rs  tokenizer.rs
parlance-prelude/: Cargo.toml
parlance-prelude/src/: church.rs  controll.rs  ffi.rs  io.rs  lib.rs  math.rs
parlance-runtime/: Cargo.toml
parlance-runtime/src/: lib.rs
parlance-stdlib/: Cargo.toml
parlance-stdlib/src/: lib.rs  parlance_control.rs  parlance_parser.rs  parlance_string.rs
parlance-vm/: Cargo.toml
parlance-vm/src/: lib.rs
src/: lib.rs  main.rs
