[package]
name = "parlance"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "parlance-diagnostics",
    "parlance-parser",
    "parlance-compiler",
    "parlance-vm",
    "parlance-prelude",
]

[dependencies]
parlance-diagnostics = { path = "parlance-diagnostics" }
parlance-parser = { path = "parlance-parser" }
parlance-compiler = { path = "parlance-compiler" }
parlance-vm = { path = "parlance-vm" }
parlance-prelude = { path = "parlance-prelude" }
