[package]
name = "parlance"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "parlance"
path = "src/main.rs"

[workspace]
members = [
    "parlance-diagnostics",
    "parlance-parser",
    "parlance-compiler",
    "parlance-vm",
    "parlance-prelude",
    "parlance-cli"
]

[dependencies]
parlance-cli = { path = "parlance-cli" }
parlance-diagnostics = { path = "parlance-diagnostics" }
parlance-parser = { path = "parlance-parser" }
parlance-compiler = { path = "parlance-compiler" }
parlance-vm = { path = "parlance-vm" }
parlance-prelude = { path = "parlance-prelude" }
