[package]
name = "astro"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
parlance-cli = { version = "0.1.0", path = "../parlance-cli" }
parlance-module = { version = "0.1.0", path = "../parlance-module" }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
